--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Cyber Defense & Forensic Investigations Portfolio
-email:
+email: riccardotemporin92@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+#twitter_username: username
+#github_username: username
 minimal_mistakes_skin: dark
 search: true
 
@@ -69,25 +69,25 @@ author:
 footer:
   
 
-defaults:
+#defaults:
   # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+  #- scope:
+  #    path: ""
+  #    type: 
+  #  values:
+  #    layout: single
+  #    author_profile: true
+  #    read_time: true
+  #    comments: true
+  #    share: true
+  #    related: true
   # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
+  #- scope:
+  #    path: "_pages"
+  #    type: pages
+  #  values:
+  #    layout: single
+  #    author_profile: true
 
 category_archive:
   type: liquid
@@ -95,3 +95,8 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+collections:
+  posts:
+    output: true
+    permalink: /:collection/:path/
