--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Cyber Defense & Forensic Investigations Portfolio
+title: Riccardo Temporin - Cybersecurity Defense Portfolio 
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
